--- a/protokol_transf_blank.htm
+++ b/protokol_transf_blank.htm
@@ -26,9 +26,13 @@
     <div id="print_nip">
       <a href="#" onclick="document.getElementById('print_nip').style.display='none';
         document.getElementById('nastr_pech').style.display='none';
-        document.getElementById('protocol_nip').style.height='1160px';
-        document.getElementById('protocol_nip').style.transform='scale(1.15)';
-        document.getElementById('protocol_nip').style.marginTop='120px';
+        document.getElementById('protocol_nip').style.height='0px';
+        document.getElementById('protocol_nip').style.transform='scale(1.1)';
+        document.getElementById('protocol_nip').style.paddingTop='0px';
+        document.getElementById('protocol_4').style.paddingLeft='0px';
+        document.getElementById('protocol_4').style.paddingRight='0px';
+        document.getElementById('protocol_4').style.paddingBottom='0px';
+        document.getElementById('protocol_nip').style.marginTop='0px';
         document.getElementById('protocol_4').style.marginLeft='0px';
         document.getElementById('protocol_4').style.marginRight='0px';
         document.getElementById('protocol_4').style.marginBottom='0px';
@@ -38,6 +42,10 @@
         document.getElementById('nastr_pech').style.display='';
         document.getElementById('protocol_nip').style.height='';
         document.getElementById('protocol_nip').style.transform='';
+        document.getElementById('protocol_nip').style.paddingTop='';
+        document.getElementById('protocol_4').style.paddingLeft='';
+        document.getElementById('protocol_4').style.paddingRight='';
+        document.getElementById('protocol_4').style.paddingBottom='';
         document.getElementById('protocol_nip').style.marginTop='';
         document.getElementById('protocol_4').style.marginLeft='';
         document.getElementById('protocol_4').style.marginRight='';
@@ -167,7 +175,7 @@
         style="padding-top:2px; margin-left:216px; font-weight:700; text-align:left;"></div>
       <span style="font-weight:700;">Контактный телефон врача:
       </span> __________________________________________________________________________
-      <div style="height:10px"></div>
+      <div style="height:10px; margin:0; padding:0;"></div>
     </div>
     <br><br>
   </div>
